--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,21 +1,17 @@
-<h1>Games#new</h1>
-<p>Find me in app/views/games/new.html.erb</p>
+<div class="container">
 
-<% @letters.each do |letter| %>
-<%= letter %>
-<% end %>
-<br>
+
+  <h1>Games#new</h1>
+
+  <% @letters.each do |letter| %>
+  <%= letter %>
+  <% end %>
+  <br>
   <h2>What is the longest word you can find?</h2>
-<form action="/score" method="post">
-  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-  <input type="text" name="user_word" placeholder="your word!">
-  <%= hidden_field_tag :letters, @letters %>
-  <input type="submit" value="Play">
-</form>
-
-<!--
-<form action="/answer" name="question" method="get">
-    <input type="text" name="user_question" placeholder="Your question?" class="form_box">
-    <input type="submit" value="Ask!" class="submit_btn">
+  <form action="/score" method="post">
+    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+    <input type="text" name="user_word" placeholder="your word!">
+    <%= hidden_field_tag :letters, @letters %>
+    <input type="submit" value="Play">
   </form>
- -->
+</div>
